Release Notes
=============

main
----

Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.2

* Delete mailinglist files (#3357)

Dec. 14, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.0

* Remove Uber Header (I3.h) (#3151)

Jul. 27, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.4.0

* Drop support for Python 2
* Clean up python bindings /modules
* Reflect relicensing agreements received from authors of core IceTray modules.
* Refactor handling of configuration in I3ServiceBase to be clearer and less error-prone (#2832)

Feb. 22, 2022 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.3.0

* no updates

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

June 13, 2018, Alex Olivas (olivas@icecube.umd.edu)
----------------------------------------------------
Release V18-06-00

* Very minor cleanups not worth mentioning

March 23, 2017, Alex Olivas (olivas@icecube.umd.edu)
----------------------------------------------------
Release V17-03-00

* Add serialization to USE_PROJECTS

March 18, 2016, don la dieu  (nega@icecube.umd.edu)
---------------------------------------------------
Release V16-03-00

* no significant updates

December 14, 2015, don la dieu  (nega@icecube.umd.edu)
------------------------------------------------------
Release V15-12-00

* no updates

August 31, 2015, Alex Olivas  (olivas@icecube.umd.edu)
--------------------------------------------------------------------
Release V15-08-00

* Removed I3ChannelID2OMKey.  This was only needed for AMANDA.
* Added some docs (one-liners) about the classes in this project.
* Remove the test directories and references to tests in CMakeLists.txt.