@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2024 The IceTray Contributors
+//
+// SPDX-License-Identifier: BSD-2-Clause
+
 #include <interfaces/I3OMKey2MBID.h>
 
 I3OMKey2MBID::I3OMKey2MBID() { }
